# IneffaScript

./: .gitignore  CMakeLists.txt  README.md
src/: ast_parser.hpp  bytecode.hpp  char_utils.hpp  enum_magic.hpp  main.cpp  parser.hpp  vm.hpp  win32_x64_jit.hpp
test/: array_sort.lsp  count_primes.js  count_primes.lsp  count_primes.lua  count_primes.py
